--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,12 +13,6 @@
 
 body {
     background-color: colors.$bg-light;
-    overflow-x: hidden;
-}
-
-#__next {
-    position: relative;
-    overflow: hidden;
 }
 
 p,
